[workspace]
members = [
    # Crates
    "ggml-sys",
    "ggml-format",
    "ggml",
    "llm-base",
    "llama",
    "bloom",
    "llm",
    "llm-cli",

    # Tools
    "generate-ggml-bindings"
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
bytemuck = "1.13.1"
log = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
