[workspace]
members = [
    # Crates
    "crates/ggml",
    "crates/ggml/sys",
    "crates/llm",
    "crates/llm-base",
    "crates/models/*",
    "binaries/*"
]
resolver = "2"
default-members = ["binaries/llm-cli", "crates/llm"]

[workspace.package]
repository = "https://github.com/rustformers/llm"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bytemuck = "1.13.1"
bytesize = "1.1"
env_logger = "0.10.0"
log = "0.4"
rand = "0.8.5"
thiserror = "1.0"
anyhow = "1.0"

rustyline = { version = "11.0.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
spinoff = { version = "0.7.0", default-features = false, features = ["dots2"] }
clap = { version = "4.1.8", features = ["derive"] }
memmap2 = "0.5.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1", features = ["log"] }
llm-samplers = "=0.0.6"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.6-prerelease.8"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
tag-prefix = ""
