[package]
name = "bloom"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggml-rs = { path = "../ggml-rs" }
llm-base = { path = "../llm-base" }

bytemuck = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
