[package]
name = "llama-cli"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-rs = { path = "../llama-rs", features = ["convert", "quantize"] }

rand = { workspace = true }

clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4"
num_cpus = "1.15.0"
once_cell = "1.17.1"
rustyline = "11.0.0"
spinners = "4.1.0"
zstd = { version = "0.12", default-features = false }