[package]
name = "llama-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version="0.14.25", features=["full"]}
futures = "0.3"
tokio = {version = "*", features=["full"]}
clap = { version = "4.1.8", features = ["derive"] }
once_cell = "1.17.1"
num_cpus = "1.15.0"
flume = "0.10.14"
llama-rs = { path = "../llama-rs" }
rand = { workspace = true }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.10.0"
