[package]
name = "llama-rs"
version = { workspace = true }
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggml = { path = "../ggml" }

bytemuck = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

thiserror = "1.0"
partial_sort = "0.2.0"
serde_bytes = "0.11"