[package]
name = "llama-rs"
version = { workspace = true }
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggml = { path = "../ggml" }
ggml-loader = { path = "../ggml-loader" }

rand = { workspace = true }

bytemuck = "1.13.1"
partial_sort = "0.2.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
memmap2 = "0.5.10"

# Used for the `convert` feature
serde_json = { version = "1.0", optional = true }
protobuf = { version = "= 2.14.0", optional = true }
rust_tokenizers = { version = "3.1.2", optional = true }
log = "*"

[features]
convert = ["dep:serde_json", "dep:protobuf", "dep:rust_tokenizers"]
