[package]
name = "llama"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggml = { path = "../ggml" }
llm-base = { path = "../llm-base" }

bytemuck = { workspace = true }
serde = { workspace = true }

# Used for the `convert` feature
serde_json = { version = "1.0", optional = true }
protobuf = { version = "= 2.14.0", optional = true }
rust_tokenizers = { version = "3.1.2", optional = true }

[features]
convert = ["dep:serde_json", "dep:protobuf", "dep:rust_tokenizers"]

[dev-dependencies]
rand = { workspace = true }
