[package]
name = "llama"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggml = { path = "../ggml" }
llm-base = { path = "../llm-base" }
ggml-format = { path = "../ggml-format" }

bytemuck = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }

partial_sort = "0.2.0"
thiserror = "1.0"
serde_bytes = "0.11"
memmap2 = "0.5.10"

# Used for the `convert` feature
serde_json = { version = "1.0", optional = true }
protobuf = { version = "= 2.14.0", optional = true }
rust_tokenizers = { version = "3.1.2", optional = true }

# Used for the `quantize` feature
half = { version = "2.2.1", optional = true }

[features]
convert = ["dep:serde_json", "dep:protobuf", "dep:rust_tokenizers"]
quantize = ["dep:half"]

[dev-dependencies]
rand = { workspace = true }
