[package]
name = "llm-base"
version = { workspace = true }
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggml = { path = "../ggml" }
ggml-format = { path = "../ggml-format" }

bytemuck = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

bincode = "1.3.3"
log = "0.4"
partial_sort = "0.2.0"
thiserror = "1.0"
serde_bytes = "0.11"
zstd = { version = "0.12", default-features = false }
