[package]
edition = "2021"
name = "llm-cli"
version = {workspace = true}

[[bin]]
name = "llm"
path = "src/main.rs"

[dependencies]
llm = { path = "../llm" }

log = { workspace = true }
rand = {workspace = true}

bincode = "1.3.3"
clap = {version = "4.1.8", features = ["derive"]}
color-eyre = {version = "0.6.2", default-features = false}
env_logger = "0.10.0"
num_cpus = "1.15.0"
once_cell = "1.17.1"
rustyline = "11.0.0"
spinners = "4.1.0"
zstd = {version = "0.12", default-features = false}
