[package]
edition = "2021"
name = "llm-cli"
version = "0.1.1"
repository = { workspace = true }
license = { workspace = true }
description = "A CLI for running inference on supported Large Language Models. Powered by the `llm` library."
readme = "../../README.md"

[[bin]]
name = "llm"
path = "src/main.rs"

[dependencies]
llm = { path = "../../crates/llm", version = "0.1.1" }

bytesize = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rustyline = { workspace = true }
spinoff = { workspace = true }
clap = { workspace = true }

bincode = "1.3.3"
env_logger = "0.10.0"
num_cpus = "1.15.0"

color-eyre = { version = "0.6.2", default-features = false }
zstd = { version = "0.12", default-features = false }
