[package]
edition = "2021"
name = "llm-test"
version = "0.2.0-dev"
repository = { workspace = true }
license = { workspace = true }
publish = false

[package.metadata.release]
release = false

[dependencies]
llm = { path = "../../crates/llm", version = "0.2.0-dev" }

anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
llm-samplers = { workspace = true }

reqwest = "0.11.9"
indicatif = "0.16.2"

tokio = { version = "1.14.0", features = ["full"] }

serde = "1.0.130"
serde_json = "1.0.67"

[dev-dependencies]
rusty-hook = "^0.11.2"

[features]
cublas = ["llm/cublas"]
clblast = ["llm/clblast"]
metal = ["llm/metal"]

# Falcon is off by default. See `llm_falcon`'s module documentation for more information.
falcon = ["llm/falcon"]
