[package]
name = "llama-cpp-simple-clone"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggml = { path = "../ggml" }
memmap2 = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }

[features]
cublas = ["ggml/cublas"]
