[package]
name = "llm-base"
version = "0.2.0-dev"
license = { workspace = true }
repository = { workspace = true }
description = "The base for `llm`; provides common structure for model implementations. Not intended for use by end-users."
edition = "2021"
rust-version = "1.65"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggml = { path = "../ggml", version = "0.2.0-dev" }

bytemuck = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

partial_sort = "0.2.0"
serde_bytes = "0.11"
memmap2 = { workspace = true }
half = "2"
tokenizers = {version="0.13.3", default-features=false, features=["onig"]}
regex = "1.8"
tracing = { workspace = true }

llm-samplers = { workspace = true }

[features]
tokenizers-remote = ["tokenizers/http"]
cublas = ["ggml/cublas"]
clblast = ["ggml/clblast"]
metal = ["ggml/metal"]
