[package]
name = "llm-bloom"
version = "0.1.1"
license = { workspace = true }
repository = { workspace = true }
description = "An implementation of BLOOM (BigScience Large Open-science Open-access Multilingual Language Model) for the `llm` ecosystem."
edition = "2021"
readme = "../../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm-base = { path = "../../llm-base", version = "0.1.1" }

bytemuck = { workspace = true }
tokenizers = "0.13.3"
