[package]
name = "llm-codegen"
version = "0.1.0-rc1"
license = { workspace = true }
repository = { workspace = true }
description = "An implementation of Salesforce Codegen for the `llm` ecosystem."
edition = "2021"



[dependencies]
ggml = { path = "../../ggml" }
llm-base = { path = "../../llm-base", version = "0.1.0-rc1" }
bytemuck = { workspace = true }
