[package]
name = "llm-gptneox"
version = "0.1.1"
license = { workspace = true }
repository = { workspace = true }
description = "An implementation of GPT-NeoX for the `llm` ecosystem."
edition = "2021"
readme = "../../../README.md"

[dependencies]
llm-base = { path = "../../llm-base", version = "0.1.1" }

bytemuck = { workspace = true }
serde = { workspace = true }