[package]
name = "llm-llama"
version = "0.1.1"
license = { workspace = true }
repository = { workspace = true }
description = "An implementation of LLaMA (Large Language Model Meta AI) for the `llm` ecosystem."
edition = "2021"
readme = "../../../README.md"

[dependencies]
llm-base = { path = "../../llm-base", version = "0.1.1" }

bytemuck = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }