[package]
name = "llm-mpt"
version = "0.2.0-dev"
license = { workspace = true }
repository = { workspace = true }
description = "An implementation of MosaicPretrainedTransformer (MPT) for the `llm` ecosystem."
edition = "2021"
readme = "../../../README.md"

[features]
metal = ["llm-base/metal"]

[dependencies]
llm-base = { path = "../../llm-base", version = "0.2.0-dev" }

bytemuck = { workspace = true }
