[package]
name = "llm-rwkv"
version = "0.1.1"
license = { workspace = true }
repository = { workspace = true }
description = "An implementation of RWKV for the `llm` ecosystem."
edition = "2021"
readme = "../../../README.md"

[dependencies]
llm-base = { path = "../../llm-base" }
ggml = { path = "../../ggml" }

bytemuck = { workspace = true }
